# ProjectME

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  testing.py
src/projectme/: main.py
src/projectme/core/: manifest.py  scaffold.py
src/projectme/stacks/: express.py  nextjs.py  python.py  react.py
src/projectme/utils/: fs.py
tests/: test_cli.py  test_manifest.py  test_scaffold.py
